--- a/components/styles/radio/_core.scss
+++ b/components/styles/radio/_core.scss
@@ -1,4 +1,4 @@
-.#{$ui-prefix}-radio{
+.v-radio{
   display: inline-block;
   font-family: $font-family;
   font-size: $font-size-base;
@@ -6,15 +6,14 @@
   cursor: pointer;
 
   &:hover {
-    .#{$ui-prefix}-radio-input{
+    .v-radio-input{
       border-color: $blue-base;
     }
   }
 }
 
-.#{$ui-prefix}-radio-input {
+.v-radio-input {
   position: relative;
-
   display: inline-block;
   height: 14px;
   width: 14px;
@@ -24,11 +23,11 @@
 
   transition: all 200ms;
 
-  &__origin {
+  &-origin {
     display: none;
   }
 
-  &__inner{
+  &-inner{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -45,38 +44,37 @@
   }
 }
 
-.#{$ui-prefix}-radio-label{
+.v-radio-label{
   padding-left: 2px;
   line-height: 16px;
 }
 
-.#{$ui-prefix}-radio.checked{
-  .#{$ui-prefix}-radio-input{
+.v-radio.checked{
+  .v-radio-input{
     border-color: $blue-base;
-    &__inner{
+    &-inner{
       background-color: $blue-base;
       transform: scale(1);
     }
   }
 }
 
-.#{$ui-prefix}-radio.disabled{
+.v-radio.disabled{
   cursor: not-allowed;
-  .#{$ui-prefix}-radio-input{
+  .v-radio-input{
     border-color: $disabled-color;
     background-color: rgba($disabled-color, .2);
   }
   &.checked{
-    .#{$ui-prefix}-radio-input{
-       &__inner{
+    .v-radio-input{
+       &-inner{
         background-color: $disabled-color;
       }
     }
   }
 }
 
-
-.#{$ui-prefix}-radio-group{
+.v-radio-group{
   display: inline-block;
   line-height: 28px;
 }
